Updated Introduction text

--- a/index.html
+++ b/index.html
@@ -47,15 +47,12 @@ Released for free under the Creative Commons Attribution 3.0 license (templated.
 										<h2>Introduction</h2>
 										<p>What is COVID-19?</p>
 									</header>
-									<p>Covid-19 is a novel coronavirus, which means that it is a strain of coronavirus not previously identified. As noted by the CDC it is important to recognize that: “the virus causing coronavirus disease 2019 (COVID-19), is not the same as the coronaviruses that commonly circulate among humans and cause mild illness, like the common cold”.</p>
+									<p>Covid-19 is a novel coronavirus: a strain of coronavirus not previously identified. </p>
 									<header class="major">
 										<p>What is the big deal?</p>
 									</header>
-									<p>New strain of coronavirus. Since Covid-19 is new, there is no widespread immunity in the population, which makes communities more susceptible to the virus.Fast spreading. The virus is fast spreading and is thought to be transferred mainly person to person via droplets that result from coughing or sneezing.</p>
-									<header class="major">
-										<p>Understanding Exponential Growth</p>
-									</header>
-										<p>Because COVID-19 spreads so quickly, the period of fastest growth can be modeled using an exponential curve. This essentially means that the total number of confirmed cases increases by a factor every few days. Looking at the initial 1 month period when confirmed Covid-19 cases were rapidly growing we can see that the total number of cases quadrupled around every 5 days, starting from less than 100 confirmed cases at the start of March and rising to around 200,000 by April.</p>
+									<p><strong>New strain of coronavirus.</strong> Since Covid-19 is new, there is no widespread immunity in the population, which makes communities more susceptible to the virus.</p>
+									<p><strong>Fast spreading.</strong> The virus is fast spreading and is thought to be transferred mainly person to person via droplets that result from coughing or sneezing.</p>
 								</div>
 							</div>
 							<div class="feature">
@@ -64,8 +61,12 @@ Released for free under the Creative Commons Attribution 3.0 license (templated.
 						</div>
 						<div class="feature-grid">
 							<div class="feature">
+								<header class="major">
+										<p>Understanding Exponential Growth</p>
+								</header>
 								<div class="content">
-										<p>To understand just how quickly Covid-19 has spreading, we can compare the number of new deaths caused by the virus each day to the average number of deaths per day due to pneumonia and influenza during the 2017-2018 season. Over the course of a month the number of deaths per day due to Covid-19 quadrupled roughly once a week, growing from less than 100 to over 2000. Meanwhile during the one month period when pneumonia and influenza deaths were growing most for the 2017-2018 season, the average deaths per day rose from around 200 to around 450. For comparison, while it took around a month for the number of pneumonia and influenza related deaths per day to double, it took less than a week for Covid-19 related deaths per day to grow that amount.</p>
+										<p>The fast, initial spread of Covid-19 roughly fits an exponential curve. This means that the total number of confirmed cases <strong>multiplied every few days.</strong> For example, looking at the growth of new cases in the US, we can see that the total number of confirmed Covid-19 cases grows roughly 4 times in size every 5 days. </p>
+										<p>For comparison, we can look at the number of deaths per day due to pneumonia and influenza during the 2017-2018 season. In the lower graph, growth is notably <strong>much slower</strong>. It took around 6 months before the number of pneumonia and influenza related deaths per day increased by a factor of 4. In less than 2 weeks, the number of Covid-19 related deaths per day grew by the same factor. This rapid spread makes Covid-19 dangerous to the public as it can quickly overwhelm hospital resources in a short amount of time.</p>
 								</div>
 							</div>
 							<div class="feature">
